--- a/sample/index.html
+++ b/sample/index.html
@@ -6,187 +6,83 @@
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css"/>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
 
     <script src="./script/jsion.js"></script>
     <script>
 (function(){
-  var jsion, isSolo, muteTable = new Array(100);
+  // unique global instance 
+  var jsion;
 
-  function _onReady() {
-    $("#play").attr("disabled", false);
-    $(".version").text(JSiON.toString());
+  // callback when JSiON is ready to use
+  function _onJSiONReady() {
+    $("#play").removeAttr("disabled");
+    $("#version").text(JSiON.toString());
   }
 
-  function _play() {
-    var pos = parseInt($("#position").val());
-    if (pos > 0) jsion.position(pos);
-    jsion.play($("#mml").val());
-    return false;
-  }
-
-  function _stop() {
-    jsion.stop();
-    return false;
-  }
-
+  // callback when start streaming
   function _onStreamStart() {
     $("#stop").show();
     $("#play").hide();
   }
 
+  // callback when stop streaming
   function _onStreamStop() {
     $("#stop").hide();
     $("#play").show();
   }
 
-  function _onChangeTrackMode() {
-    if ($("#mute").val()=='mute') {
-      $("#mute-track").show();
-      $("#solo-track").hide();
-      isSolo = false;
-    } else {
-      $("#mute-track").hide();
-      $("#solo-track").show();
-      isSolo = true;
-    }
-    $("#mute-track>label,#solo-track>label").removeClass('active');
-    _updateMuteTable();
+  // play MML
+  function _play() {
+    var pos = parseInt($("#position").val());
+    if (pos > 0) jsion.position(pos*1000);
+    jsion.play($("#mml").val());
   }
 
-  function _updateMuteTable() {
-    var $label, i, track, mutetrack17;
-
-    if (isSolo) {
-    } else {
-    }
-    jsion.applyMuteTable(muteTable);
+  // stop playing MML
+  function _stop() {
+    jsion.stop();
   }
 
-  function __checkMuteTrack() {
-    var $label, mutetrack17, i;
-
-    $label = $("#mute-track>label");
-    mutetrack17 = $label.eq(16).hasClass('active');
-
-    for (i=0; i<16; i++) {
-      muteTable[i] = $label.eq(i).hasClass('active');
-    }
-    for (i=16; i<100; i++) {
-      muteTable[i] = mutetrack17;
-    }
-  }
-
-  function __checkSoloTrack() {
-    var $label, solotrack, i;
-
-    $label = $("#solo-track>label");
-
-    solotrack = -1;
-    for (i=0; i<16; i++) {
-      if ($label.eq(i).hasClass('active')) {
-        solotrack = i;
-        break;
-      }
-    }
-
-    if (solotrack == -1) {
-      for (i=0; i<100; i++) {
-        muteTable[i] = false;
-      }
-    } else {
-      for (i=0; i<100; i++) {
-        muteTable[i] = (solotrack != i);
-      }
-    }
-  }
-
+  // initializer
   $(function(){
     JSiON.swfURL = "./script/jsion.swf";
-    jsion = new JSiON(_onReady);
+    jsion = new JSiON(_onJSiONReady);
+
     jsion.onStreamStart = _onStreamStart;
     jsion.onStreamStop  = _onStreamStop;
-    $("#play").click(_play).attr("disabled", true);
+
+    $("#play").click(_play).attr("disabled", "disabled");
     $("#stop").click(_stop).hide();
-    isSolo = false;
-    $("#mute").on("change", _onChangeTrackMode);
-    $("#mml").height($(window).height() - 240);
+
+    $("#mml").height($(window).height() - 280);
   });
 })();
     </script>
   </head>
 
   <body>
-    <div class="panel panel-default">
-      <div class="panel-heading">
-        SiON MML Editor (<span class="version">Loading SiON module ...</span>)
+    <div class='container'>
+      <div class='page-header'>
+        <h2>SiON MML Editor</h2>
+        <small id="version">Loading SiON module ...</small>
       </div>
-      <div class="panel-body">
-        <form class="form-inline">
-          <div class="form-group">
-            <button type="button" class="btn btn-primary" id="play"><span class="glyphicon glyphicon-play"></span> Play</button>
-            <button type="button" class="btn btn-warning" id="stop"><span class="glyphicon glyphicon-stop"></span> Stop</button>
-          </div>
-          <div class="form-group">
-            <label for="position">Position</label>
-            <input type="input" class="form-control" id="position" placeholder="0"/>[ms]
-          </div>
-          <div style="float:right;">
-            <a class="btn btn-default" href="http://keim.github.io/sion/mmlref/" target="_blank">MML Reference</a>
-          </div>
-        </form>
-        <br/>
 
-        <form>
-          <div class="form-group">
-            <textarea class="form-control" rows="20" id="mml" placeholder="write mml here"></textarea>
+      <nav class="navbar navbar-default">
+        <form class="navbar-form">
+          <button id="play" title="Play" class="btn btn-primary"><span class="glyphicon glyphicon-play"></span></button>
+          <button id="stop" title="Stop" class="btn btn-danger"><span class="glyphicon glyphicon-stop"></span></button>
+          <div class="input-group">
+            <input type="input" class="form-control" id="position" placeholder="0" aria-describedby="position-sec" style="width:80px;"/>
+            <span id="position-sec" class="input-group-addon">sec.</span>
           </div>
         </form>
+      </nav>
 
-        <form class="form-inline">
-          <select class="form-control" id="mute">
-            <option value="mute">Mute</option>
-            <option value="solo">Solo</option>
-          </select>
-          <div class="btn-group" id="mute-track" data-toggle="buttons">
-            <label class="btn btn-default"><input type="checkbox" autocomplete="off">1</label>
-            <label class="btn btn-default"><input type="checkbox" autocomplete="off">2</label>
-            <label class="btn btn-default"><input type="checkbox" autocomplete="off">3</label>
-            <label class="btn btn-default"><input type="checkbox" autocomplete="off">4</label>
-            <label class="btn btn-default"><input type="checkbox" autocomplete="off">5</label>
-            <label class="btn btn-default"><input type="checkbox" autocomplete="off">6</label>
-            <label class="btn btn-default"><input type="checkbox" autocomplete="off">7</label>
-            <label class="btn btn-default"><input type="checkbox" autocomplete="off">8</label>
-            <label class="btn btn-default"><input type="checkbox" autocomplete="off">9</label>
-            <label class="btn btn-default"><input type="checkbox" autocomplete="off">10</label>
-            <label class="btn btn-default"><input type="checkbox" autocomplete="off">11</label>
-            <label class="btn btn-default"><input type="checkbox" autocomplete="off">12</label>
-            <label class="btn btn-default"><input type="checkbox" autocomplete="off">13</label>
-            <label class="btn btn-default"><input type="checkbox" autocomplete="off">14</label>
-            <label class="btn btn-default"><input type="checkbox" autocomplete="off">15</label>
-            <label class="btn btn-default"><input type="checkbox" autocomplete="off">16</label>
-            <label class="btn btn-default"><input type="checkbox" autocomplete="off">17~</label>
-          </div>
-          <div class="btn-group" id="solo-track" data-toggle="buttons" style="display:none;">
-            <label class="btn btn-default"><input type="radio" autocomplete="off">1</label>
-            <label class="btn btn-default"><input type="radio" autocomplete="off">2</label>
-            <label class="btn btn-default"><input type="radio" autocomplete="off">3</label>
-            <label class="btn btn-default"><input type="radio" autocomplete="off">4</label>
-            <label class="btn btn-default"><input type="radio" autocomplete="off">5</label>
-            <label class="btn btn-default"><input type="radio" autocomplete="off">6</label>
-            <label class="btn btn-default"><input type="radio" autocomplete="off">7</label>
-            <label class="btn btn-default"><input type="radio" autocomplete="off">8</label>
-            <label class="btn btn-default"><input type="radio" autocomplete="off">9</label>
-            <label class="btn btn-default"><input type="radio" autocomplete="off">10</label>
-            <label class="btn btn-default"><input type="radio" autocomplete="off">11</label>
-            <label class="btn btn-default"><input type="radio" autocomplete="off">12</label>
-            <label class="btn btn-default"><input type="radio" autocomplete="off">13</label>
-            <label class="btn btn-default"><input type="radio" autocomplete="off">14</label>
-            <label class="btn btn-default"><input type="radio" autocomplete="off">15</label>
-            <label class="btn btn-default"><input type="radio" autocomplete="off">16</label>
-          </div>
-        </form>
-      </div>
+      <form>
+        <div class="form-group">
+          <textarea id="mml" class="form-control" rows="20" placeholder="write mml here"></textarea>
+        </div>
+      </form>
     </div>
   </body>
 </html>
